# pfsdk

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  docs-fixed.yml  docs.yml  dynamic-proto-tests.yml  release-artifacts.yml  release.yml  setup-repo.yml  test-manual.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  index.md  python-api.md
docs/api/: openapi.md
docs/research/: A2A-SELECTIVE-DISCLOSURE-EXTENSION.md  KEK-CEK.md  KEY-MANAGEMENT.md  PRD-react-chat-app.md  XRPL-CHAT-APPLICATION-ADAPTATION.md
docs/research/react-chat/: PLAN.md  PRD.md
docs/solidity/: README.md
overrides/: main.html
overrides/partials/: header.html
postfiat/: exceptions.py
postfiat/client/: __init__.py
postfiat/types/: enums.py
postfiat/v3/: __init__.py  messages_pb2.py
proto/: buf.gen.docs.yaml  buf.gen.openapi-only.yaml  buf.gen.yaml  buf.yaml
proto/postfiat/v3/: errors.proto  messages.proto
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
python/a2a/: __init__.py
python/a2a/v1/: __init__.py
python/docs/: conf.py  index.rst
python/examples/: a2a_integration_example.py
python/postfiat/: __init__.py  exceptions.py  logging.py
python/postfiat/client/: __init__.py  base.py
python/postfiat/envelope/: __init__.py  envelope_store.py  factory.py  storage.py
python/postfiat/envelope/stores/: __init__.py  evm_store.py  redis_store.py  xrpl_store.py
python/postfiat/models/: __init__.py  generated.py
python/postfiat/services/: __init__.py
python/postfiat/services/impl/: __init__.py  agent_registry_impl.py  content_storage_impl.py  envelope_storage_impl.py
python/postfiat/types/: __init__.py  enums.py
python/postfiat/v3/: __init__.py  errors_pb2.py  messages_pb2.py
python/scripts/: ci_test_generation.py  generate_dynamic_protobuf_tests.py  generate_protobuf.py  generate_python_types.py  generate_service_tests.py  proto_introspection.py  schema_evolution_test_generator.py  serialization_test_generator.py  service_test_generator.py  setup-a2a-dependency.sh  validation_test_generator.py
python/tests/: __init__.py
python/tests/manual/: test_content_storage.py  test_envelope_store.py
python/tests/manual/unit/: conftest.py  test_agent_registry_service.py  test_content_storage_service.py  test_envelope_storage_service.py
python/tests/services/: __init__.py  test_agent_registry_service.py  test_content_storage_service.py  test_envelope_storage_service.py
scripts/: __init__.py  ci_test_generation.py  dev_test_regen.py  fix-empty-structs.sh  generate_docs.py  generate_dynamic_protobuf_tests.py  generate_fastapi_services.py  generate_protobuf.py  generate_protobuf_tests.py  generate_python_types.py  monitor-ci.py  proto_introspection.py  serialization_test_generator.py  setup-a2a-dependency.sh  setup_github_protection.sh  update-all-versions.sh  validation_test_generator.py
solidity/: .gitignore  foundry.toml  package-lock.json  package.json
solidity/script/: Deploy.s.sol
solidity/scripts/: fix-generated-code.py  fix-imports.py
solidity/src/contracts/: AgentRegistrySimple.sol  MessagingSimple.sol
solidity/test/: AgentRegistrySimple.t.sol
tests/manual/: .gitkeep
typescript/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsdoc.json  tsup.config.ts  typedoc.json
typescript/docs/: index.md
typescript/examples/: envelope-factory-example.ts
typescript/scripts/: generate-typescript-tests.ts  generate-typescript-types.ts  update-version.js
typescript/src/: version.ts
typescript/src/crypto/: PostFiatCrypto.ts  index.ts
typescript/src/envelope/: envelope-store.ts  factory.ts  index.ts  storage.ts
typescript/src/envelope/stores/: redis-store.ts
typescript/src/hooks/: PostFiatProvider.tsx  index.tsx  usePostFiatClient.ts
typescript/src/sdk/: client.test.ts  client.ts  config.ts  errors.test.ts  errors.ts
typescript/src/services/: index.ts
typescript/src/services/impl/: agent-registry-impl.ts  content-storage-impl.ts  envelope-storage-impl.ts  index.ts
typescript/src/types/: index.ts
typescript/src/utils/: index.test.ts  index.ts
typescript/tests/: setup.js
typescript/tests/manual/integration/: selective-disclosure.test.ts
typescript/tests/manual/unit/: PostFiatCrypto.test.ts  content-storage.test.ts  envelope-store.test.ts  services.test.ts
